--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -65,7 +65,7 @@
     <string name="not_encrypted_request" msgid="4871472176807381642">"Гэты прынтар больш не прымае зашыфраваныя заданні. Прадоўжыць друкаванне?"</string>
     <string name="accept" msgid="4426153292469698134">"Прыняць"</string>
     <string name="reject" msgid="24751635160440693">"Адхіліць"</string>
-    <string name="connections" msgid="8895413761760117180">"Злучэнні"</string>
+    <string name="connections" msgid="8895413761760117180">"Падключэнні"</string>
     <string name="wifi_direct_permission_rationale" msgid="3599186620970379218">"Каб знаходзіць прылады паблізу, стандартнаму сэрвісу друку патрабуюцца дазволы на доступ да даных пра месцазнаходжанне."</string>
     <string name="fix" msgid="7784394272611365393">"Праглядзець дазвол"</string>
 </resources>
