--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -65,7 +65,7 @@
     <string name="not_encrypted_request" msgid="4871472176807381642">"Տպիչն այլևս չի ընդունում գաղտնագրված առաջադրանքներ: Շարունակե՞լ տպումը:"</string>
     <string name="accept" msgid="4426153292469698134">"Ընդունել"</string>
     <string name="reject" msgid="24751635160440693">"Մերժել"</string>
-    <string name="connections" msgid="8895413761760117180">"Կապեր"</string>
+    <string name="connections" msgid="8895413761760117180">"Միացումներ"</string>
     <string name="wifi_direct_permission_rationale" msgid="3599186620970379218">"Մոտակա սարքերը գտնելու համար կանխադրված տպման ծառայությանն անհրաժեշտ է տեղորոշման տվյալների օգտագործման թույլտվություն:"</string>
     <string name="fix" msgid="7784394272611365393">"Թույլտվություններ"</string>
 </resources>
